tests/ui/missing/missing-items/missing-type-parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:4:5
   |
LL |     foo();
   |     ^^^ cannot infer type of the type parameter `X` declared on the function `foo`
   |
help: consider specifying the generic argument
   |
LL |     foo::<X>();
   |        +++++

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0282`.
